# SplitCommander

./: .gitignore  CMakeLists.txt  README.md  filepane.cpp  filepane.h  install.sh  release.sh  splitcommander.desktop
build_check/: Makefile  splitcommander
build_check/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_check/splitcommander_autogen/: deps  mocs_compilation.cpp
src/: CMakeLists.txt  README.md  addnetworkdialog.cpp  addnetworkdialog.h  agebadgedialog.cpp  agebadgedialog.h  batchrenamer.cpp  batchrenamer.h  config.cpp  config.h  dialogutils.cpp  dialogutils.h  drivedelegate.cpp  drivedelegate.h  drivemanager.cpp  drivemanager.h  drophandler.cpp  drophandler.h  filemanager1.cpp  filemanager1.h  fileoperations.cpp  fileoperations.h  filepane.cpp  filepane.h  filepanedelegate.cpp  filepanedelegate.h  filetablemodel.cpp  filetablemodel.h  gitmanagerdialog.cpp  gitmanagerdialog.h  hoverfader.cpp  hoverfader.h  install.sh  joboverlay.cpp  joboverlay.h  jobprogresswidget.cpp  jobprogresswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  (+34 more)
src/scfix/: panewidget.cpp  panewidget.h
translations/: splitcommander_de.qm  splitcommander_de.ts  splitcommander_en.qm  splitcommander_en.ts
